tests/bugs/if_expression_return_656.sy
a :: fn a ->
    if a == 0 do
        ret a
    else do
        ret 1
    end
end

start :: fn do end

// error: A 'void' cannot be a 'int'
